# XAMS-ThermoTools

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: derivations.ipynb  heat_transfer.ipynb  loop.ipynb  loop_calculator_documentation.ipynb  measurement_hydrostatic_head.ipynb  sc_analysis.ipynb
python/: loop_calculator.py  slow_control.py
python/xams.egg-info/: PKG-INFO  SOURCES.txt
